--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "openai": "^4.36.0"
   }
 }
